fix: adjust opacity of NotRevealedIcon for improved visibility and remove unnecessary border from color-audio-disabled class

--- a/frontend/src/styles/utilities.css
+++ b/frontend/src/styles/utilities.css
@@ -5,7 +5,7 @@
   }
 
   .color-audio-disabled {
-    @apply cursor-default border-2;
+    @apply cursor-default;
     @apply border-background-light dark:border-background-dark bg-inherit text-inherit;
   }
 
